major rewrite using @robotevents/client

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-node_modules
-out
+# dependencies
+/.yarn/install-state.gz
+/node_modules
+
+# production
+/dist
+
+# environment variables
+/.env
+
+# IDE
+/.vscode
